--- a/easyheals/src/components/PriceFilterSlider.css
+++ b/easyheals/src/components/PriceFilterSlider.css
@@ -1,11 +1,11 @@
 /* Increase specificity to override default styles */
 .noUi-connect {
     background-color: #FF5733;
-    height: 8px;
+    height: 0.8vh;
 }
 
 .noUi-target {
-    height: 8px;
+    height: 0.8vh;
 }
 
 /* Hide the vertical bars inside the default handle */
@@ -20,11 +20,11 @@
 
 /* Customize the appearance of the default handle square */
 .noUi-origin > .noUi-handle {
-    width: 18px; /* Adjust the width as needed */
-    height: 18px; /* Adjust the height as needed */
-    top: -6px;
-    right: -9px; /* half the width */
-    border-radius: 9px; /* Adjust the border radius as needed */
+    width: 1vw; /* Adjust the width as needed */
+    height: 1vw; /* Adjust the height as needed */
+    top: -0.6vh;
+    right: -0.9vw; /* half the width */
+    border-radius: 9vw; /* Adjust the border radius as needed */
     border-color: #FF5733;
-    border-width: 4px;
+    border-width: 0.3vw;
 }
